# api/handler/cashbunny.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"database/sql"
+	"strconv"
 
 	"github.com/golang-jwt/jwt/v5"
 	"github.com/labstack/echo/v4"
@@ -25,11 +26,11 @@ func NewCashbunnyHandler(db *sql.DB) *CashbunnyHandler {
 	}
 }
 
-func (h *CashbunnyHandler) CreateCategory(ctx echo.Context) *api.APIResponse {
+func (h *CashbunnyHandler) CreateAccountCategory(ctx echo.Context) *api.APIResponse {
 	token := ctx.Get("user").(*jwt.Token)
 	claims := token.Claims.(*auth.JWTClaims)
 
-	req := new(cashbunny.CreateCategoryRequestDTO)
+	req := new(cashbunny.CreateAccountCategoryRequestDTO)
 
 	if err := ctx.Bind(req); err != nil {
 		return api.NewAPIResponse(err, "")
@@ -39,18 +40,21 @@ func (h *CashbunnyHandler) CreateCategory(ctx echo.Context) *api.APIResponse {
 		return api.NewAPIResponse(err, "")
 	}
 
-	c, err := h.cashbunny.CreateCategory(ctx.Request().Context(), claims.UserID, req)
+	c, err := h.cashbunny.CreateAccountCategory(ctx.Request().Context(), claims.UserID, req)
+	if err != nil {
+		return api.NewAPIResponse(err, "")
+	}
 
-	return api.NewAPIResponse(err, response.NewCategoryResponseDTO(c))
+	return api.NewAPIResponse(nil, response.NewAccountCategoryResponseDTO(c))
 }
 
-func (h *CashbunnyHandler) ListCategories(ctx echo.Context) *api.APIResponse {
+func (h *CashbunnyHandler) ListAccountCategories(ctx echo.Context) *api.APIResponse {
 	token := ctx.Get("user").(*jwt.Token)
 	claims := token.Claims.(*auth.JWTClaims)
 
-	result, err := h.cashbunny.ListCategories(ctx.Request().Context(), claims.UserID)
+	result, err := h.cashbunny.ListAccountCategories(ctx.Request().Context(), claims.UserID)
 
-	return api.NewAPIResponse(err, response.NewListCategoriesResponseDTO(result))
+	return api.NewAPIResponse(err, response.NewListAccountCategoriesResponseDTO(result))
 }
 
 func (h *CashbunnyHandler) CreateAccount(ctx echo.Context) *api.APIResponse {
@@ -79,4 +83,19 @@ func (h *CashbunnyHandler) ListAccounts(ctx echo.Context) *api.APIResponse {
 	result, err := h.cashbunny.ListAccounts(ctx.Request().Context(), claims.UserID)
 
 	return api.NewAPIResponse(err, response.NewListAccountResponseDTO(result))
+}
+
+func (h *CashbunnyHandler) DeleteAccount(ctx echo.Context) *api.APIResponse {
+	token := ctx.Get("user").(*jwt.Token)
+	claims := token.Claims.(*auth.JWTClaims)
+
+	accountID, err := strconv.ParseInt(ctx.Param("id"), 10, 32)
+	if err != nil {
+		return api.NewAPIResponse(err, "")
+	}
+
+	err = h.cashbunny.DeleteAccount(ctx.Request().Context(), claims.UserID, uint32(accountID))
+
+	return api.NewAPIResponse(err, nil)
+
 }
