# api/route/route.go
@@ -32,8 +32,9 @@ func registerV1Routes(e *echo.Group, cfg *config.Config, jwtMiddleware echo.Midd
 	v1Secure.Use(jwtMiddleware)
 	v1Secure.GET("/auth", handler.CreateEchoHandlerFunc(cfg, h.AuthHandler.GetAuthUser))
 
-	v1Secure.POST("/cashbunny/categories", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.CreateCategory))
-	v1Secure.GET("/cashbunny/categories", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.ListCategories))
+	v1Secure.POST("/cashbunny/account_categories", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.CreateAccountCategory))
+	v1Secure.GET("/cashbunny/account_categories", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.ListAccountCategories))
 	v1Secure.POST("/cashbunny/accounts", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.CreateAccount))
 	v1Secure.GET("/cashbunny/accounts", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.ListAccounts))
+	v1Secure.DELETE("/cashbunny/accounts/:id", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.DeleteAccount))
 }
